--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,5 +1,75 @@
 views:
-  - path: default_view
+  - title: Home
+    panel: true
+    path: default_view
+    cards:
+      - type: picture-elements
+        image: /local/background.png
+        theme: tablet
+        elements:
+
+          ##########################################################################
+          #                                                                        #
+          #                              * SIDEBAR *                               #
+          #                                                                        #
+          ##########################################################################
+
+          - type: image
+            image: local/sidebar.png
+            style:
+              top: 49.24%
+              left: 10.6%
+              width: 21.5%
+              pointer-events: none
+              border-right: 2px solid rgba(58,69,73,0.2)
+            card_mod:
+              style:
+                hui-image$div: |
+                  #brokenImage {
+                    opacity: 0 !important;
+                  }
+          #################################################
+          #                                               #
+          #                   MARKDOWN                    #
+          #                                               #
+          #################################################
+
+          - type: custom:hui-element
+            card_type: markdown
+            style:
+              top: 9%
+              left: 11.1%
+            card_mod:
+              class: markdown-sidebar
+              style:
+                .: |
+                  ha-markdown {
+                    padding: 0 !important;
+                  }
+                ha-markdown:
+                  $: |
+                    :host {
+                      opacity: 0.9;
+                    }
+                    ha-markdown-element > p > span {
+                      font-family: SF Text;
+                      font-size: 5vw;
+                      font-weight: 200;
+                      margin-left: -0.3vw;
+                      letter-spacing: -0.05vw;
+                    }
+                    ha-markdown-element > p > span > span {
+                      position: relative;
+                      top: -.09em;
+                    }
+            content: >
+              <span>{{ now().strftime('%H') }}<span>:</span>{{ now().strftime('%M') }}</span>
+              <font color='#6a7377'><b>{{ states('sensor.sidebar_day') }}</b><br>
+              <b>{{ states('sensor.sidebar_date') }}</b> </font><br> 
+              <b>{{ states('sensor.sidebar_greeting') }}</b>
+              <font color='#6a7377'>
+              </font>
+  - path: old
     title: Home
     cards:
       - type: entities
@@ -42,7 +112,7 @@ views:
       - type: media-control
         entity: media_player.bedroom_tv
       - type: media-control
-        entity: media_player.living_room_tv
+        entity: media_player.living_room_tv_2
       - type: media-control
         entity: media_player.main_group
       - type: entities
