--- a/configuration.yaml
+++ b/configuration.yaml
@@ -9,7 +9,8 @@ lovelace:
   resources:
     [ {url: /hacsfiles/kiosk-mode/kiosk-mode.js,                              type: module},
       {url: /hacsfiles/lovelace-card-mod/card-mod.js,                         type: module},
-      {url: /hacsfiles/lovelace-hui-element/hui-element.js,                   type: module} ]
+      {url: /hacsfiles/lovelace-hui-element/hui-element.js,                   type: module},
+      {url: /local/font.css,                                                  type: css} ]
 
 frontend:
   themes: !include themes.yaml
